[project]
name = "task-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Shreenidhi Shetty",email = "shreenidhishetty391@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
task-cli = "task_cli.main:main"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
